# oneFocus

./: AddTaskDialog.qml  BottomNavigationBar.qml  CMakeLists.txt  InitMain.qml  InitMain.qml.autosave  main.cpp  main.qml  res.qrc
ui/: MyButton.qml  MyTabButton.qml  SplashScreen.qml  TabEnum.qml  Theme.qml
